[tool.poetry]
name = "qna-web"
version = "0.1.0"
description = "POC application to implement Q&A on a website utilizing the Langchain framework."
authors = ["Fedir Alifirenko <fedor.alifirenko@gmail.com>"]
readme = "README.md"
packages = [{include = "qna_web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
langchain-openai = "^0.1.19"
typer = "^0.12.3"
pandas = "^2.2.2"
gradio = "^4.39.0"
beautifulsoup4 = "^4.12.3"
playwright = "^1.45.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
mypy = "^1.11.0"

[tool.poetry.scripts]
crawler = "qna_web.crawler:entrypoint"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
